knowledge_base/knowledge/v15/capl/structured/Obsolete/EthStopPacketGenerator.md
# EthStopPacketGenerator

> Category: `Obsolete` | Type: `notes`

## Description

See Also

| Deprecated Function Replaced by: ethStopPacketGenerator |  |  |  |  |
|---|---|---|---|---|
| Note This feature is only available with Vector Ethernet hardware (e.g. VN5610, VN5610A, VN5640 and VN7640). |  |  |  |  |
| Function Syntax | long EthStopPacketGenerator( ); |  |  |  |
| Function | This function stops the Ethernet packet generator. |  |  |  |
| Parameters | — |  |  |  |
| Return Values | 0 or error code |  |  |  |
| Availability | Up to Version | Restricted To | Measurement Setup | Simulation/Test Setup |
| 8.1 SP3-12.0 | Ethernet | — | • |  |
| Example on start{ LONG packetHandle; char error[255]; // create packet and start packet generator packetHandle = EthInitPacket("udp"); if (EthGetLastError() == 0) { // set protocol fields EthSetTokenInt( packetHandle, "ipv4", "source", 0xC0A80001 ); // 192.168.0.1 EthSetTokenInt( packetHandle, "ipv4", "destination", 0xFFFFFFFF ); // 255.255.255.255 EthSetTokenInt( packetHandle, "udp", "source", 23 ); EthSetTokenInt( packetHandle, "udp", "destination", 23 ); // set UDP payload EthResizeToken( packetHandle, "udp", "data", 12*8 ); /*8 byte text, 4 byte counter*/ EthSetTokenData( packetHandle, "udp", "data", 5, "Counter " ); // complete EthCompletePacket( packetHandle ); // configure generator EthConfigurePacketGenerator(packetHandle, 10000, 38); //10000 fps // release packet EthReleasePacket( packetHandle ); } else { EthGetLastErrorText( elCount(error), error ); write("Error: %s", error ); }}on key '1'{ // start generator EthStartPacketGenerator(1000000); //one million packets, should run about 100s}on key '2'{ // stop generator before it is finished EthStopPacketGenerator();} |  |  |  |  |

| Version 15© Vector Informatik GmbH |
|---|
